# perks

./: .gitignore  AGENTS.md  INSTALL.md  README.md  TODO.md
opendataloader/tests/benchmark/: pyproject.toml  run.py  thresholds.json
opendataloader/tests/benchmark/ground-truth/: reference.json
opendataloader/tests/benchmark/ground-truth/markdown/: 01030000000001.md  01030000000002.md  01030000000003.md  01030000000004.md  01030000000005.md  01030000000006.md  01030000000007.md  01030000000008.md  01030000000009.md  01030000000010.md  01030000000011.md  01030000000012.md  01030000000013.md  01030000000014.md  01030000000015.md  01030000000016.md  01030000000017.md  01030000000018.md  01030000000019.md  01030000000020.md  01030000000021.md  01030000000022.md  01030000000023.md  01030000000024.md  01030000000025.md  01030000000026.md  01030000000027.md  01030000000028.md  01030000000029.md  01030000000030.md  01030000000031.md  01030000000032.md  01030000000033.md  01030000000034.md  01030000000035.md  01030000000036.md  01030000000037.md  01030000000038.md  01030000000039.md  01030000000040.md  (+160 more)
opendataloader/tests/benchmark/prediction/opendataloader-hybrid-docling-fast/: evaluation.csv  evaluation.json  (+1 more)
opendataloader/tests/benchmark/src/: converter_markdown_table.py  engine_registry.py  evaluator.py  evaluator_heading_level.py  evaluator_reading_order.py  evaluator_table.py  evaluator_table_detection.py  evaluator_triage.py  pdf_parser.py  pdf_parser_opendataloader.py  pdf_parser_opendataloader_hybrid_docling_fast.py  pdf_parser_opendataloader_hybrid_hancom.py
(+3493 files in other folders)
